--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -51,6 +51,10 @@
             android:name="com.stanleyhlng.apps.android_twitter_client_redux.NewTweetActivity"
             android:label="@string/title_activity_new_tweet" >
         </activity>
+        <activity
+            android:name="com.stanleyhlng.apps.android_twitter_client_redux.ProfileActivity"
+            android:label="@string/title_activity_profile" >
+        </activity>
     </application>
 
 </manifest>
